tests/ui/env-macro/env-too-many-args.stderr
error: `env!()` takes 1 or 2 arguments
  --> $DIR/env-too-many-args.rs:1:13
   |
LL | fn main() { env!("one", "two", "three"); }
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

